<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/black_deep">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/w_king"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unimib_chess"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginBottom="40dp" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/username_o_email"
            android:textColorHint="@color/grigio_chiaro"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:textColorHint="@color/grigio_chiaro"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:layout_marginBottom="32dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/accedi"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:backgroundTint="@color/green_soft"
            android:layout_marginBottom="32dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="24dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/white_trasp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oppure_accedi_con"
                android:textColor="@color/grigio_chiaro"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/white_trasp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/googleLoginButton"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/social_button_background"
                android:src="@drawable/ic_google"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:elevation="4dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/google"/>

            <ImageButton
                android:id="@+id/facebookLoginButton"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/social_button_background"
                android:src="@drawable/ic_facebook"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:elevation="4dp"
                android:contentDescription="@string/facebook"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non_hai_un_account"
                android:textColor="@color/grigio_chiaro" />

            <TextView
                android:id="@+id/registerLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrati"
                android:textStyle="bold"
                android:textColor="@color/green_soft" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>